# controllable-space-filling-curve

./: CMakeLists.txt  INFO.txt  LICENSE  README.md  addText.sh  compile.sh  figure15.sh  figure25.sh  gen_movie.sh
include/LBFGS/: cvt.hpp
include/LBFGS/LBFGSpp/: LineSearchBacktracking.h
include/graphics/: DirectionField.h  Globals.h  HamCore.h  Shape.h  Window.h
include/initialization/: CycleCreator.h  GraphCreator.h  Matching.h  UnionFind.h
include/localAlgo/: LocalOperator.h  ObjectiveFunctions.h
include/managers/: CycleManager.h  GeneticAlgorithm.h  GraphCreator.h  Printer.h
include/tools/: Layer.h  Matching.h  Random.h  Union.h
input/: brain.txt  people.txt
src/: main.cpp
src/LBFGS/: cvt.cpp
src/graphics/: DirectionField.cpp  Globals.cpp  HamCore.cpp  Shape.cpp  Window.cpp  triangulate.cpp
src/initialization/: CycleCreator.cpp  GraphCreator.cpp
src/localAlgo/: LocalOperator.cpp  ObjectiveFunctions.cpp
src/managers/: CycleManager.cpp  GeneticAlgorithm.cpp  GraphCreator.cpp  Printer.cpp
src/tools/: Layer.cpp  Matching.cpp  Union.cpp
